Alterado botão de remover por icone

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         </div>
 
         <section class="lista_tarefas">
+            <ul class="lista_tarefas_elementos">
+
+            </ul>
         </section>
     </main>
 
