Atribuido função de remover tarefa

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
 
         <section class="lista_tarefas">
-            <ul class="lista_tarefas_elementos">
-
+            <ul class="lista_tarefas_conteudo">
+                
             </ul>
         </section>
     </main>
